// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Travis publishing script should fail on postPublish error 1`] = `[VError: Postpublish hooks failed: Postpublish test error]`;

exports[`Travis publishing script should fail on prePublish error 1`] = `[VError: Prepublish failed: Prepublish test error]`;

exports[`Travis publishing script should fail on publish error 1`] = `[VError: Publish failed: Publish test error]`;

exports[`Travis publishing script should support prefix 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/f4a98378271c17e91faa9e70a2718c34c04cfc27.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.f4a9837123456",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;

exports[`Travis publishing script should support prefix 2`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/cozy-drive/2.1.8-beta.2.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "cozy-drive/2.1.8-beta.2",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;

exports[`Travis publishing script should throw an error if the editor is missing 1`] = `"Registry editor is missing in the manifest. Publishing failed."`;

exports[`Travis publishing script should throw an error if the token is missing 1`] = `"Registry token is missing. Publishing failed."`;

exports[`Travis publishing script should work correctly if --build-url provided 1`] = `
Object {
  "appBuildUrl": "https://mock/archive/1.0.0.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;

exports[`Travis publishing script should work correctly if Travis environment variable provided (no TRAVIS_TAG) 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/f4a98378271c17e91faa9e70a2718c34c04cfc27.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.f4a98371551298916519",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;

exports[`Travis publishing script should work correctly if no space name provided 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/2.1.8.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "default",
}
`;

exports[`Travis publishing script should work correctly with TRAVIS_TAG 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/2.1.8.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8",
  "buildCommit": undefined,
  "buildDir": "build",
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://apps-registry.cozycloud.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;
